html styling pagination item alignment change date diff bug

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -76,7 +76,7 @@ h1 {
 
 .footer-1 h5{
 
-    margin-top: 2%;
+    margin-top: 3%;
 
 
 }
